syntax = "proto3";

package com.mocker.rest;

message CreateMockRequest {}

message CreateMockResponse {}