syntax = "proto3";

package com.mocker.rest;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service RestMocker {
  rpc createService(CreateServiceRequest) returns (CreateServiceResponse);

  rpc createModel(CreateModelRequest) returns (CreateModelResponse);
}

message CreateServiceRequest {
  string name = 1;
  string path = 2;
  google.protobuf.StringValue url = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.Timestamp expiration_time = 5;
}

message CreateServiceResponse {}

message CreateModelRequest {
  string service_path = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
  string schema = 4;
}

message CreateModelResponse {}
